Mass reformat.